latest typo fixes

--- a/doc/cs/kap01.tex
+++ b/doc/cs/kap01.tex
@@ -93,7 +93,7 @@ Ve většině případů tyto frameworky skládají uživatelské rozhraní ze z
 
 Framework Angular považuji za nejlepší volbu z těchto technologií. Jedná se o moderní a prověřenou technologii, jež používá jazyk TypeScript. TypeScript je oproti JavaScriptu statický typovaný, což je dle mého názoru velká výhoda. 
 
-Další výhodou frameworku je velké množství knihoven, které můžeme v aplikaci jednoduše použít, jako příklad můžeme uvéest vestavěného HTTP klienta či Router. 
+Další výhodou frameworku je velké množství knihoven, které můžeme v aplikaci jednoduše použít, jako příklad můžeme uvést vestavěného HTTP klienta či Router. 
 S vývojem aplikací ve frameworku Angular mám již také zkušenosti, což je další z důvodů, které vedly k volbě tohoto frameworku.
 
 \section{Microsoft SQL Server}
