--- a/doc/cs/kap02.tex
+++ b/doc/cs/kap02.tex
@@ -46,7 +46,7 @@ Ve složce \textit{Models} jsou třídy reprezentující databázové entity. Ka
 		ForumPost & příspěvek ve fóru k danému kurzu \\ \hline
 		Grade & známka, kterou student obdržel (kromě známek z testů) \\ \hline
 		Person & uživatel aplikace \\ \hline
-		TestQuestion & jednu otázku v testu \\ \hline
+		TestQuestion & jedna otázka v testu \\ \hline
 		TestSubmission & test s odpověďmi odeslaný uživatelem \\ \hline
 		TestSubmissionAnswer & odpověď k dané otázce v testu \\
 		\hline
